Creacion de la clase Util  que valide un numero valido para las transferencias y retiro

--- a/Ejercicio7/CajeroAutomatico.csproj
+++ b/Ejercicio7/CajeroAutomatico.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
     <EmbeddedResource Include="Menucajero.resx">
       <DependentUpon>Menucajero.cs</DependentUpon>
     </EmbeddedResource>
